modify to get input structures

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-KAIST EE YHKLab 
-OORINano in development
-============================= developed by J Park ==========================================================
+KAIST EE YHKLab (Prof. Yong-Hoon Kim)
+OORINano in development: Dr. Joonho Park, Ms. SeungHeun Yu, 
+
 ###### Download and setting
 ### Download
 git clone https://github.com/yhkimlab/OORINano oorinano
